--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 </head>
 <body>
 <header>
-  <h1> Samuel Ramos </h1>
-  <nav>
+  <div class="row">
   <ul class="main-nav">
        <li class="active"><a href=""> HOME </a></li>
        <li><a href=""> ABOUT </a></li>
        <li><a href=""> CONTACT </a></li>
   </ul>
-   </nav>
-   </div>
+</div>
 </header>
+   <div class="dream">
+   <h1> Samuel Ramos </h1>
+   </div>
 </body>
 </html>
