--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
 <header>
       <div class="row">
            <ul1 class="main-nav">
-               <li class="active"><a href=""> HOME </a></li>
-               <li><a href="about.html"> ABOUT </a></li>
+               <li><a href="index.html"> HOME </a></li>
+               <li class="active"><a href=""> ABOUT </a></li>
                <li><a href="contact.html"> CONTACT </a></li>
            </ul1>
       </div>
@@ -17,5 +17,6 @@
            <h1> Samuel Ramos </h1>
       </div>
 </header>
+
 </body>
 </html>
