--- a/about.html
+++ b/about.html
@@ -17,6 +17,6 @@
            <h1> Samuel Ramos </h1>
       </div>
 </header>
-
+   <p class="texto">I am a software developer, currently internship at <a href="http://www.viareal.com.br/seleciona-cidade">ViaReal</a> and graduating in Engineering of Telecommunications  at <a href="https://www.ufsj.edu.br/">UFSJ</a>.</p>
 </body>
 </html>
