--- a/about.html
+++ b/about.html
@@ -2,23 +2,20 @@
 <html lang="en">
 <head>
   <title>Samuel Ramos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="custom.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <header>
-      <div class="row">
-           <ul1 class="main-nav">
-               <li><a href="index.html"> HOME </a></li>
-               <li class="active"><a href=""> ABOUT </a></li>
-               <li><a href="contact.html"> CONTACT </a></li>
-           </ul1>
-      </div>
-      <div class="dream">
-           <h1> Samuel Ramos </h1>
-      </div>
+     <div class="topnav">
+          <a href="index.html"> HOME </a>
+          <a class="active" href="about.html"> ABOUT </a>
+          <a href="contact.html"> CONTACT </a>
+        </div>
+
 </header>
    <p class="texto">I am a curious tech student. I'm always learning and developing my skills relatives a software developing,
-                       currently trainee at <a href="http://www.viareal.com.br/seleciona-cidade">ViaReal</a>
-                       and graduating in Engineering of Telecommunications  at <a href="https://www.ufsj.edu.br/">UFSJ</a>.</p>
+                       currently trainee at <a href="http://www.viareal.com.br/seleciona-cidade">ViaReal</a> and graduating in Engineering of Telecommunications  at <a href="https://www.ufsj.edu.br/">UFSJ</a>.</p>
 </body>
 </html>
