--- a/contact.html
+++ b/contact.html
@@ -2,27 +2,26 @@
 <html lang="en">
 <head>
   <title>Samuel Ramos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="custom.css" rel="stylesheet" type="text/css">
   <link href="style.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <header>
-      <div class="row">
-           <ul1 class="main-nav">
-               <li><a href="index.html"> HOME </a></li>
-               <li><a href="about.html"> ABOUT </a></li>
-               <li class="active"><a href=""> CONTACT </a></li>
-           </ul1>
-      </div>
-      <div class="dream">
-           <h1> Samuel Ramos </h1>
-      </div>
+     <div class="topnav">
+       <a href="index.html"> HOME </a>
+       <a href="about.html"> ABOUT </a>
+       <a class="active" href="contact.html"> CONTACT </a>
+     </div>
 </header>
+     <div>
+     <p class="texto_contact">Follow me in the social media:</p>
      <ul>
-       <li><a href="https://www.facebook.com/samuel.ramos.92"><i class="fa fa-facebook" aria-hidden="true"></i></a>
        <li><a href="https://twitter.com/SamuelRamos_MG"><i class="fa fa-twitter" aria-hidden="true"></i></a>
        <li><a href="https://www.linkedin.com/in/samuelramos-sjr/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
       <li><a href="https://github.com/SamuelRmos"><i class="fa fa-github" aria-hidden="true"></i></a>
     </ul>
+     </div>
 </body>
 </html>
