--- a/index.html
+++ b/index.html
@@ -2,19 +2,26 @@
 <html lang="en">
 <head>
   <title>Samuel Ramos</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="custom.css" rel="stylesheet" type="text/css">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <header>
-      <div class="row">
-           <ul1 class="main-nav">
-               <li class="active"><a href=""> HOME </a></li>
-               <li><a href="about.html"> ABOUT </a></li>
-               <li><a href="contact.html"> CONTACT </a></li>
-           </ul1>
+      <div class="topnav">
+               <a class="active"href=" #"> HOME </a>
+               <a href="about.html"> ABOUT </a>
+               <a href="contact.html"> CONTACT </a>
       </div>
-      <div class="dream">
-           <h1> Samuel Ramos </h1>
+      <div>
+
+          <img src="samuel.png" alt="Red" class="center">
+
+          <p class="texto_index"> Welcome to my website, space created with the purpose of showing my professional 
+                                  information, sharing and gaining knowledge.My name is Samuel Ramos, 
+                                  I'm graduating in Telecommunications Engineering and I'm also an Automation Technician.
+           </p>
+           
       </div>
 </header>
 </body>
