new altertion in layout

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <div class="sidenav">
 		<div class="side_top">
-			<img src="images/tali.png" alt="news image" class="img-fluid navimg">
+			<img src="images/samuel.png" alt="news image" class="img-fluid navimg">
 			<h1>talisson<br>crafting connections</h1>
 		</div>
 		<!-- header -->
